--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.square {
+  width: 400px;
+  height: 400px;
+  border: 2px solid black;
+  box-shadow: 2px 2px 5px black;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.square p {
+  font-size: 2rem;
+}
+
+form {
+  margin-top: 1rem;
+}
+
+form label {
+  margin-right: 10px;
+}
+
+input[type="text"] {
+  padding: 0.25rem;
+  font-size: 1rem;
+  width: 100%;
+  box-shadow: 2px 2px 5px black;
+  border-radius: 15px;
+  outline: none;
+}
+
+.toggle-color {
+  width: 50%;
+  font-size: 1rem;
+  margin-top: 10px;
+  box-shadow: 2px 2px 5px black;
+  border-radius: 15px;
+  padding: 0.25rem;
+}
